# eda-automator

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  sample_data.csv  setup.py
.cursor/rules/: analysis_rules.mdc  cicd_rules.mdc  cicd_standards.mdc  core_rules.mdc  eda_automator_guidelines.mdc  visuals_rules.mdc
.github/workflows/: python-package.yml
docs/: ProjectSpec.md  Roadmap.md  index.md  report_best_practices.md
docs/architecture/: ProjectSpec.md  index.md
docs/development/: CursorBestPractices.md  Roadmap.md  index.md
docs/user_guides/: index.md  quick_start.md  report_best_practices.md
eda_automator/: README.md  __init__.py  cli.py  config.yaml
eda_automator/core/: __init__.py  automator.py
eda_automator/core/analysis/: __init__.py  basic.py  correlation.py  distribution.py  missing.py  outliers.py  target.py
eda_automator/core/data/: __init__.py  generator.py  loader.py
eda_automator/core/report_generators/: __init__.py  html.py  image.py  markdown.py
eda_automator/core/templates/: default.css  (+1 more)
eda_automator/requirements/: image_generation.txt
eda_automator/unified/: __init__.py  analysis.py  config.py  data.py  dependencies.py  main.py  unified_config.py  unified_utils.py  unified_visualizations.py  utils.py  visualizations.py
examples/: README.md  unified_eda_modular.py
examples/notebooks/: quickstart.ipynb
output/unified/: informe_completo.html
scripts/: create_project_structure.py  reorganize.py  verify_version.py
tests/: test_bivariate.py  test_data_quality.py  test_eda_automator.py  test_multivariate.py  test_stats_analysis.py  test_univariate.py  test_utils.py
(+12 files in other folders)
