[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eda_automator"
version = "0.1.0"
description = "Automated exploratory data analysis tool"
readme = "README.md"
authors = [
    {name = "EDA Automator Team", email = "example@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
requires-python = ">=3.7"
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.7.0",
    "statsmodels>=0.13.0",
    "jinja2>=3.0.0",
    "pyyaml>=6.0",
    "imgkit>=1.2.3",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/eda_automator"
"Bug Tracker" = "https://github.com/yourusername/eda_automator/issues"

[tool.setuptools]
packages = ["eda_automator"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
addopts = "--cov=eda_automator --cov-report=term-missing" 